Don't crash in debugger if QScriptEngine is deleted

Task-number: QTBUG-21548

Change-Id: I925a920c8685cf4cf40c7ad03c2d519e2f2121fb
Reviewed-by: Kent Hansen <kent.hansen@nokia.com>